--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 # Exported from Render on 2025-09-08T23:54:57Z
 databases:
-- name: CSE340-PostgreSQL
+- name: CSE340-PostgreSQL3
   databaseName: cse340_0k7w
   user: cse340
   plan: free
